// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContextIcon Component should export, and handle icon variants: icon variant, ansible 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "ansible",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, canceled 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "failed",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, cancelled 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "failed",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, completed 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "success",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, created 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "pending",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, download 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "download",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, error 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "failed",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, failed 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "failed",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, idCard 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "idCard",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, info 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "info",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, network 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "network",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, openshift 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "openshift",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, paused 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "warning",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, pencil 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "pencil",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, pending 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "pending",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, rhacs 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "rhacs",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, running 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "pending",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, satellite 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "satellite",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, scans 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "scans",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, sources 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "sources",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, success 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "success",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, trash 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "trash",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, unknown 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "unknown",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, unreachable 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "unreachable",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, user 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "user",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, vcenter 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "vcenter",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: icon variant, warning 1`] = `
{
  "children": [],
  "size": "sm",
  "symbol": "warning",
}
`;

exports[`ContextIcon Component should export, and handle icon variants: variants 1`] = `
{
  "ansible": "ansible",
  "canceled": "failed",
  "cancelled": "failed",
  "completed": "success",
  "created": "pending",
  "download": "download",
  "error": "failed",
  "failed": "failed",
  "idCard": "idCard",
  "info": "info",
  "network": "network",
  "openshift": "openshift",
  "paused": "warning",
  "pencil": "pencil",
  "pending": "pending",
  "rhacs": "rhacs",
  "running": "pending",
  "satellite": "satellite",
  "scans": "scans",
  "sources": "sources",
  "success": "success",
  "trash": "trash",
  "unknown": "unknown",
  "unreachable": "unreachable",
  "user": "user",
  "vcenter": "vcenter",
  "warning": "warning",
}
`;

exports[`ContextIcon Component should render a basic component with default props: basic 1`] = `
<UnknownIcon
  color="currentColor"
  noVerticalAlign={false}
  size="sm"
/>
`;
